syntax = "proto3";

package talent.v1;

import "common/v1/metadata.proto";

option go_package = "github.com/nmxmxh/master-ovasabi/api/protos/talent/v1;talentpb";

service TalentService {
  rpc CreateTalentProfile(CreateTalentProfileRequest) returns (CreateTalentProfileResponse);
  rpc UpdateTalentProfile(UpdateTalentProfileRequest) returns (UpdateTalentProfileResponse);
  rpc DeleteTalentProfile(DeleteTalentProfileRequest) returns (DeleteTalentProfileResponse);
  rpc GetTalentProfile(GetTalentProfileRequest) returns (GetTalentProfileResponse);
  rpc ListTalentProfiles(ListTalentProfilesRequest) returns (ListTalentProfilesResponse);
  rpc SearchTalentProfiles(SearchTalentProfilesRequest) returns (SearchTalentProfilesResponse);
  rpc BookTalent(BookTalentRequest) returns (BookTalentResponse);
  rpc ListBookings(ListBookingsRequest) returns (ListBookingsResponse);
}


message TalentProfile {
  string id = 1;
  int64 master_id = 2; // Internal integer ID reference to master table
  string master_uuid = 9; // Global UUID reference to master table
  string user_id = 3;
  string display_name = 4;
  string bio = 5;
  repeated string skills = 6;
  repeated string tags = 7;
  string location = 8;
  string avatar_url = 10;
  repeated Experience experiences = 11;
  repeated Education educations = 12;
  int64 created_at = 13;
  int64 updated_at = 14;
  common.Metadata metadata = 15;
  int64 campaign_id = 16; // campaign/tenant context
}

message Experience {
  string company = 1;
  string title = 2;
  string description = 3;
  int64 start_date = 4;
  int64 end_date = 5;
  common.Metadata metadata = 6;
}

message Education {
  string institution = 1;
  string degree = 2;
  string field_of_study = 3;
  int64 start_date = 4;
  int64 end_date = 5;
  common.Metadata metadata = 6;
}

message Booking {
  string id = 1;
  string talent_id = 2;
  string user_id = 3;
  string status = 4;
  int64 start_time = 5;
  int64 end_time = 6;
  string notes = 7;
  int64 created_at = 8;
  common.Metadata metadata = 9;
  int64 campaign_id = 10;
}

message CreateTalentProfileRequest { TalentProfile profile = 1; int64 campaign_id = 2; }
message CreateTalentProfileResponse { TalentProfile profile = 1; int64 campaign_id = 2; }
message UpdateTalentProfileRequest { TalentProfile profile = 1; int64 campaign_id = 2; }
message UpdateTalentProfileResponse { TalentProfile profile = 1; int64 campaign_id = 2; }
message DeleteTalentProfileRequest { string profile_id = 1; int64 campaign_id = 2; }
message DeleteTalentProfileResponse { bool success = 1; int64 campaign_id = 2; }
message GetTalentProfileRequest { string profile_id = 1; int64 campaign_id = 2; }
message GetTalentProfileResponse { TalentProfile profile = 1; int64 campaign_id = 2; }
message ListTalentProfilesRequest { int32 page = 1; int32 page_size = 2; repeated string skills = 3; repeated string tags = 4; string location = 5; int64 campaign_id = 6; }
message ListTalentProfilesResponse { repeated TalentProfile profiles = 1; int32 total_count = 2; int32 page = 3; int32 total_pages = 4; int64 campaign_id = 5; }
message SearchTalentProfilesRequest { string query = 1; int32 page = 2; int32 page_size = 3; repeated string skills = 4; repeated string tags = 5; string location = 6; int64 campaign_id = 7; }
message SearchTalentProfilesResponse { repeated TalentProfile profiles = 1; int32 total_count = 2; int32 page = 3; int32 total_pages = 4; int64 campaign_id = 5; }
message BookTalentRequest {
  string talent_id = 1;
  string user_id = 2;
  int64 start_time = 3;
  int64 end_time = 4;
  string notes = 5;
  common.Metadata metadata = 6;
  int64 campaign_id = 7;
}
message BookTalentResponse { Booking booking = 1; int64 campaign_id = 2; }
message ListBookingsRequest { string user_id = 1; int32 page = 2; int32 page_size = 3; int64 campaign_id = 4; }
message ListBookingsResponse { repeated Booking bookings = 1; int32 total_count = 2; int32 page = 3; int32 total_pages = 4; int64 campaign_id = 5; } 